--- a/index.html
+++ b/index.html
@@ -19,21 +19,28 @@
           <select name="" id="category">
           </select>
           <button id="add">Add</button>
+          <input type="checkbox" id = "check">
         </form>
       </div>
       <div class="wrapper__lists">
-        <ul class="list" id="fruits">
+        <div class="list" id="fruits">
           <p id="fruittext">Fruits</p>
+          <ul class="listfruit">
+          </ul>
           <button id="clear" class="clear__button">Clear</button>
-        </ul>
-        <ul class="list" id="vegetables">
+        </div>
+        <div class="list" id="vegetables">
           <p id="vegetabletext">Vegetables</p>
+          <ul class="listveget">
+          </ul>
           <button class="clear clear__button">Clear</button>
-        </ul>
-        <ul class="list" id="melonproduct">
+        </div>
+        <div class="list" id="melonproduct">
           <p id="melontext">Melon products</p>
+          <ul class="listmelon">
+          </ul>
           <button class="melon__clear clear__button">Clear</button>
-        </ul>
+        </div>
       </div>
     </div>
   </div>
